--- a/.github/workflows/ci-debug2.yml
+++ b/.github/workflows/ci-debug2.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Install it with opam
         run: |
-          opam install -v --strict ocamlfind
+          opam install -v ocamlfind
 
       - name: Archive test results
         if: always()
