--- a/.github/workflows/ci-debug.yml
+++ b/.github/workflows/ci-debug.yml
@@ -47,6 +47,11 @@ jobs:
           opam exec -- bash ./configure
         shell: bash
 
+      - name: Show Makefile.config
+        run: |
+          cat Makefile.config
+        shell: bash
+
       - name: make all
         run: |
           opam exec -- make all
