--- a/.github/workflows/ci-debug.yml
+++ b/.github/workflows/ci-debug.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Install it with opam
         run: |
-          opam install ocamlfind
+          opam install -v ocamlfind
 
       - name: Archive test results
         if: always()
